# amqp-api-client

./: .gitignore  Cargo.toml
src/: amqp_input_api_consumer.rs  amqp_output_api_consumer.rs  api_consumer.rs  lib.rs  output.rs  rpc.rs
